--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "sistemasmultimedia",
   "version": "1.0.0",
   "description": "",
-  "main": "8_compressionAlgoritm.js",
+  "main": "9_imageRecoding.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -19,6 +19,7 @@
   "dependencies": {
     "buffer-to-uint8array": "^1.1.0",
     "lz4": "^0.6.5",
+    "path": "^0.12.7",
     "pngjs": "^6.0.0",
     "zlib": "^1.0.5",
     "zstd-codec": "^0.1.2"
